[package]
name = "websocket-server"
version = "0.1.0"
authors = ["bingli224@gmail.com`"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = '0.10.0'
actix-web = { version = '3.3.2' }
actix-web-actors = '3.0.0'
actix-rt = '2.0.2'
futures = '0.3.8'

[dev-dependencies]
awc = '2.0.3'

[[example]]
name = "client_awc"
